# ideotype

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: testsuite.yaml
ci/: ideotype_test.yml
ideotype/: __init__.py  analysis.py  data_process.py  figures.py  init_custom.py  init_params.py  log.py  nass_process.py  read_sims.py  setup.py  soils_process.py  soils_query.py  sql_altertable.py  sql_declarative.py  sql_index.py  sql_insert.py  sql_query.py  sql_update.py  utils.py  weafile_process.py  wflow_setup.py
ideotype/data/: init_pdate.yml
ideotype/data/climate_cluster/: sites_clusered.csv
ideotype/data/files/: filepaths.yml  filepaths_control_dympd.yml  filepaths_control_fixpd.yml  filepaths_f2050.yml  filepaths_f2100.yml  filepaths_local.yml  filepaths_nass.yml  filepaths_present.yml  filepaths_repo.yml  filepaths_soils.yml  filepaths_wea.yml  params_opt.csv  siteyears_filtered.csv  wea_summary.csv
ideotype/data/inits/: init_control.yml  init_control_dympd.yml  init_control_dympd_daylensen.yml  init_control_dympd_soil1.yml  init_control_dympd_soil2.yml  init_control_fixpd.yml  (+9 more)
ideotype/tests/: conftest.py  test_data_process.py  test_sql_insert.py  test_wflow_setup.py
scripts/: db_adjustment.py  fig_param.py  insert_sims.py  make_cvarfile.py  make_db.py  make_site_summary.py  make_smalldb.py  process_wea.py  query_sims.py  soils_assigntexture.py  soils_classify.R  soils_queryssurgo.py  update_db.py  vangenuch.py  wea_future.py  wea_process.py  wea_siteyears.py  wea_write.py  wflow.py  wflow_control.py  wflow_control_fixpd.py
(+60 files in other folders)
